p/themes/Origine/origine.css
@charset "UTF-8";

/*=== GENERAL */
/*============*/
:root {
	--background-color-light-gradient: #eee;
	--background-color-light: #fff;
	--background-color-light-shadowed: #f6f6f6;
	--background-color-grey: #f0f0f0;
	--background-color-hover: #f6f6f6;

	--unread-article-background-color: #fff3ed;
	--unread-article-border-color: #ff5300;
	--favorite-article-background-color: #fff6da;
	--favorite-article-border-color: #ffc300;

	--contrast-background-color: #0084cc;
	--contrast-background-color-gradient: #0045cc;
	--contrast-background-color-hover: #06c;
	--contrast-background-color-active: #0062be;
	--contrast-border-color: #0062b7;

	--contrast-background-font-color: #eee;

	--attention-background-color-gradient1: #ea4a46;
	--attention-background-color-gradient2: #911811;

	--attention-background-color-gradient1-hover: #d14641;
	--attention-background-color-gradient2-hover: #bd362f;
	--attention-background-color-active: #bd362f;
	--attention-border-color: #c44742;

	--empty-feed-color: #e67e22;
	--error-feed-color: #bd362f;

	--alert-warn-background-color: #ffffe0;
	--alert-warn-font-color: #4b3315;
	--alert-warn-border-color: #eeb;
	--alert-success-background-color: #e8ffe8;
	--alert-success-font-color: #244424;
	--alert-success-border-color: #cec;
	--alert-error-background-color: #fdd;
	--alert-error-font-color: #693a3a;
	--alert-error-boder-color: #ecc;

	--notification-good-background-color: #ffe;
	--notification-good-border-color: #eeb;
	--notification-good-font-color: #916a37;
	--notification-bad-background-color: #fdd;
	--notification-bad-font-color: #643838;
	--notification-bad-border-color: #ecc;
	--notification-close-background-color-hover: #aaa2;

	--font-color: #111;
	--font-color-grey: #666;
	--font-color-light-shadowed: #aaa;
	--font-color-light: #fff;

	--text-shadow-color: #aaa;
	--text-shadow-color-dark: #666;
	--box-shadow-color: #bbb6;
	--box-shadow-color-inset: #e0e0e0;

	--font-color-link: #0062be;
	--font-color-link-hover: #038;

	--border-color: #ddd;
	--border-color-shadow-side: #ccc;
	--contrast-border-color-active: #0062be;

	--form-element-font-color-focus: #0062be;
	--form-element-border-color-focus: #3bf;
	--form-element-focus-box-shadow-color-inset: #ddf;
	--form-element-border-color-invalid: #f00;
	--form-element-invalid-box-shadow-color-inset: #fdd;
}


html, body {
	background-color: var(--background-color-light);
	color: var(--font-color);
	font-family: "OpenSans", "Cantarell", "Helvetica", "Arial", "PingFang SC", "Microsoft YaHei", sans-serif;
}

/*=== Links */
a, button.as-link {
	color: var(--font-color-link);
	outline: none;
}

a:hover,
button.as-link:hover {
	color: var(--font-color-link-hover);
}

/*=== Forms */
legend {
	margin: 20px 0 5px;
	padding: 5px 0;
	font-size: 1.4em;
	border-bottom: 1px solid var(--border-color);
}

label {
	min-height: 25px;
	padding: 5px 0;
	cursor: pointer;
}

input:hover,
select:hover,
textarea:hover {
	color: var(--font-color);
}

textarea {
	width: 360px;
	height: 100px;
}

input, select, textarea {
	padding: 7px;
	background-color: var(--background-color-light);
	color: var(--font-color-grey);
	border: 1px solid var(--border-color);
	border-radius: 3px;
	vertical-align: middle;
}

option {
	padding: 0 .5em;
}

input:focus, select:focus, textarea:focus, input[type="password"]:focus + .toggle-password {
	color: var(--form-element-font-color-focus);
	border-color: var(--form-element-border-color-focus);
	box-shadow: 0 2px 2px var(--form-element-focus-box-shadow-color-inset) inset;
	outline: none;
}

input:invalid, select:invalid {
	border-color: var(--form-element-border-color-invalid);
	box-shadow: 0 0 2px 2px var(--form-element-invalid-box-shadow-color-inset) inset;
}

input:disabled, select:disabled {
	background-color: var(--background-color-light-shadowed);
}

input.extend {
	transition: width 200ms linear;
}

/*=== Tables */
table {
	border-collapse: collapse;
}

th, td {
	border: 1px solid var(--border-color);
}

th {
	background-color: var(--background-color-light-shadowed);
}

form td,
form th {
	font-weight: normal;
	text-align: center;
}

/*=== COMPONENTS */
/*===============*/
/*=== Forms */
.form-group.form-actions {
	margin-bottom: 40px;
	padding: 5px 0;
	background-color: var(--background-color-light-shadowed);
	border-top: 1px solid var(--border-color);
}

.form-group.form-actions .btn {
	margin: 0 20px 0 0;
}

.form-group .group-name {
	padding: 10px 0;
	text-align: right;
}

.form-group .group-controls {
	min-height: 25px;
	padding: 10px 0;
}

.form-group .group-controls label {
	padding: 0;
}

.form-group .group-controls > input,
.form-group .group-controls > select,
.form-group .group-controls > textarea,
.form-group .group-controls .stick {
	margin: -5px 0 5px 0;
}

.form-group .group-controls .stick .btn {
	padding-top: 2px;
	padding-bottom: 2px;
}

/*=== Buttons */
.stick input,
.stick .btn {
	border-radius: 0;
}

.stick .btn:first-child,
.stick input:first-child {
	border-radius: 3px 0 0 3px;
}

.stick .btn-important:first-child {
	border-right: 1px solid var(--contrast-border-color);
}

.stick .btn:last-child,
.stick input:last-child {
	border-radius: 0 3px 3px 0;
}

.stick .btn + .btn,
.stick .btn + input,
.stick .btn + .dropdown > .btn,
.stick input + .btn,
.stick input + input,
.stick input + .dropdown > .btn,
.stick .dropdown + .btn,
.stick .dropdown + input,
.stick .dropdown + .dropdown > .btn {
	border-left: none;
}

.stick input + .btn {
	border-top: 1px solid var(--border-color);
}

.stick .btn + .dropdown > .btn {
	border-left: none;
	border-radius: 0 3px 3px 0;
}
/* ... */

